--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,17 +1,18 @@
 {
-"islami" : "اسلامي" ,
-"quran" : "القرأن" ,
-"hadeth" : "الحديث" ,
-"radio" : "الراديو" ,
-"tasbeh" : "التسبيح" ,
-"settings" : "الاعدادات",
-"suraName" : "اسم الصورة",
-"hadethName" : "اسم الحديث",
-"language" : "اللغة",
-"arabic" : "اللغة العربية",
-"english" : "اللغة الانجليزية",
-"theme" : "النمط",
-"dark" : "مظلم",
-"light" : "مضيء",
-"thenumberofpraises" : "عدد التسبيحات"
+  "islami": "اسلامي",
+  "quran": "القرأن",
+  "hadeth": "الحديث",
+  "radio": "الراديو",
+  "tasbeh": "التسبيح",
+  "settings": "الاعدادات",
+  "suraName": "اسم الصورة",
+  "hadethName": "اسم الحديث",
+  "language": "اللغة",
+  "arabic": "اللغة العربية",
+  "english": "اللغة الانجليزية",
+  "theme": "النمط",
+  "dark": "مظلم",
+  "light": "مضيء",
+  "thenumberofpraises": "عدد التسبيحات",
+  "clear": "مسح"
 }
