--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,17 +1,18 @@
 {
-"islami" : "Islami" ,
-"quran" : "Quran" ,
-"hadeth" : "Hadeth" ,
-"radio" : "Radio" ,
-"tasbeh" : "Tasbeh" ,
-"settings" : "Settings",
-"suraName" : "Sura Name",
-"hadethName" : "Hadeth Name",
-"language" : "Language",
-"arabic" : "Arabic",
-"english" : "English",
-"theme" : "Theme",
-"dark" : "dark",
-"light" : "Light",
-"thenumberofpraises" : "The Number of Praises"
+  "islami": "Islami",
+  "quran": "Quran",
+  "hadeth": "Hadeth",
+  "radio": "Radio",
+  "tasbeh": "Tasbeh",
+  "settings": "Settings",
+  "suraName": "Sura Name",
+  "hadethName": "Hadeth Name",
+  "language": "Language",
+  "arabic": "Arabic",
+  "english": "English",
+  "theme": "Theme",
+  "dark": "dark",
+  "light": "Light",
+  "thenumberofpraises": "The Number of Praises",
+  "clear": "Clear"
 }
